RESOLVED FIXED118446
[mediastream] Fix a bug in MediaStreamDescriptor::removeVideoComponent
https://bugs.webkit.org/show_bug.cgi?id=118446
Summary [mediastream] Fix a bug in MediaStreamDescriptor::removeVideoComponent
Nick Diego Yamane (diegoyam)
Reported 2013-07-06 17:37:48 PDT
[mediastream] Bugfix in MediaStreamDescriptor::removeVideoComponent
Attachments
Patch (1.72 KB, patch)
2013-07-06 17:46 PDT, Nick Diego Yamane (diegoyam)
no flags
Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2 (519.36 KB, application/zip)
2013-07-06 23:37 PDT, Build Bot
no flags
Nick Diego Yamane (diegoyam)
Comment 1 2013-07-06 17:46:15 PDT
Created attachment 206195 [details] Patch MediaStreamDescriptor::removeVideoComponent is currently trying to remove the videoComponent from the wrong vector.
Build Bot
Comment 2 2013-07-06 23:37:03 PDT
Comment on attachment 206195 [details] Patch Attachment 206195 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/979474 New failing tests: editing/style/5065910.html
Build Bot
Comment 3 2013-07-06 23:37:05 PDT
Created attachment 206203 [details] Archive of layout-test-results from webkit-ews-10 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-10 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.3
Chris Dumez
Comment 4 2013-07-08 04:50:25 PDT
Comment on attachment 206195 [details] Patch Can this be covered by a layout test?
Nick Diego Yamane (diegoyam)
Comment 5 2013-07-08 13:57:25 PDT
(In reply to comment #4) > (From update of attachment 206195 [details]) > Can this be covered by a layout test? Actually, it's supposed to be covered by layout test fast/mediastream/MediaStream-add-remove-tracks.html, but MEDIASTREAM is enabled only in blackberry port and we are currently working on mediastream support for Nix port.
Nick Diego Yamane (diegoyam)
Comment 6 2013-07-09 11:13:50 PDT
(In reply to comment #5) > (In reply to comment #4) > > (From update of attachment 206195 [details] [details]) > > Can this be covered by a layout test? > > Actually, it's supposed to be covered by layout test fast/mediastream/MediaStream-add-remove-tracks.html, but MEDIASTREAM is enabled only in blackberry port and we are currently working on mediastream support for Nix port. Sorry, the comment above is wrong :( I've just realized fast/mediastream/MediaStream-add-remove-tracks.html doens't test MediaStreamDescriptor logic, it tests only MediaStream's addTrack/removeTrack, checking the audioTrack/videoTrack vector's length. I don't know if it's possible to test MediaStreamDescriptor itself via Layout tests, since it's not directly exposed to javascript.
WebKit Commit Bot
Comment 7 2013-07-10 11:43:34 PDT
Comment on attachment 206195 [details] Patch Clearing flags on attachment: 206195 Committed r152540: <http://trac.webkit.org/changeset/152540>
WebKit Commit Bot
Comment 8 2013-07-10 11:43:37 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.