Fix a bug in MediaStreamDescriptor::removeVideoComponent https://bugs.webkit.org/show_bug.cgi?id=118446

Patch by Nick Diego Yamane <nick.yamane@openbossa.org> on 2013-07-10
Reviewed by Eric Carlson.

MediaStreamDescriptor::removeVideoComponent is currently trying to
remove the 'videoComponent' from the wrong vector.

* platform/mediastream/MediaStreamDescriptor.h:
(WebCore::MediaStreamDescriptor::removeVideoComponent):

Canonical link: https://commits.webkit.org/136493@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152540 268f45cc-cd09-0410-ab3c-d52691b4dbfc