Source/WebCore/platform/mediastream/MediaStreamDescriptor.h
@@ -86,9 +86,9 @@ public:
     void addVideoComponent(PassRefPtr<MediaStreamComponent> component) { m_videoComponents.append(component); }
     void removeVideoComponent(MediaStreamComponent* component)
     {
-        size_t pos = m_audioComponents.find(component);
+        size_t pos = m_videoComponents.find(component);
         if (pos != notFound)
-            m_audioComponents.remove(pos);
+            m_videoComponents.remove(pos);
     }
 
     bool ended() const { return m_ended; }
